# mybot

./: .gitignore  bot.py  pyproject.toml  requirements.txt
migrations/versions/: 4f8ac90c4423_second_revision.py
src/plugins/GenshinUID/: __init__.py  client.py
src/plugins/WutheringWaves/: __init__.py
src/plugins/chat/: __init__.py  base.py  config.py  main.py  model.py  models.py  utils.py
src/plugins/chat/data/: character.txt  records.json
src/plugins/chat/migrations/: e9081ee5fcc6_first_revision.py
src/plugins/chat/revGLM/: agents.py  data.py  entity.py  glm.py
src/plugins/chat/revTongYi/: __init__.py  wanxiang.py
src/plugins/deepseek/: __init__.py  commands.py  config.py  const.py  main.py  models.py  utils.py
src/plugins/deepseek/migrations/: 4e04430dc99a_third_revision.py  66e41daece75_second_revision.py  867b1e235ee3_first_revision.py
src/plugins/deepseek/resources/: face_id.json  replies.json
src/plugins/deepseek/revKimi/: main.py
src/plugins/disconnect_notice/: __init__.py  config.py
src/plugins/fakepic/: __init__.py  __main__.py  config.py  draw.py
src/plugins/group_manager/: __init__.py  data.py
src/plugins/gscore_starrail/: __init__.py
src/plugins/gscore_wutheringwaves/: __init__.py  handler.py  slash.py  tower.py  utils.py
src/plugins/gscore_wutheringwaves/period_challenges/: error.py  generator.py  handler.py  utils.py
src/plugins/gscore_wutheringwaves/templates/: tower.html
src/plugins/hakimi_encode/: __init__.py
src/plugins/help/: __init__.py  data_source.py  plugin_alias.json
src/plugins/human_switch/: __init__.py  config.py  handler.py
src/plugins/manager/: __init__.py
src/plugins/ninja3/: __init__.py  database.py  db_manager.py  dhm.py  remind.py  requires.py  search.py  uid_bind.py  utils.py
src/plugins/ninja3/cbt/: __init__.py  test.py  utils.py
src/plugins/ninja3/data/: bzdhm.txt  forbidden.json  qq_to_uid.json  remind.json  weapon_data.json  weapon_name.json
src/plugins/ninja3/migrations/: 5a2fce2f15b6_first_revision.py
src/plugins/ninja3/ninja_redeem/: __init__.py  api_client.py  main.py  sign.js  (+1 more)
src/plugins/nonebot_plugin_fakemsg/: __init__.py  __main__.py  config.py
src/plugins/nonebot_plugin_fakepic/: __init__.py  config.py
src/plugins/pao_club/: __init__.py  club.db  db.py  errors.py  test.py  utils.py
src/plugins/qqmusic/: __init__.py  config.py  draw.py
src/plugins/reminder/: __init__.py  config.py  data.py  model.py  setting.py  utils.py
src/plugins/repeat/: __init__.py
src/plugins/resident/: __init__.py  group_invite.py
src/plugins/setu/: __init__.py
src/plugins/sundry/: __init__.py  daily.py  star_son.py  sundry.py
src/plugins/wutheringwaves/: __init__.py
(+9 files in other folders)
