[tool.poetry]
name = "mybot"
version = "0.1.0"
description = "mybot"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
bilireq = { version = "^0.2.6", extras = ["qrcode"] }
cachetools = "^5.0.0"
dateparser = "^1.1.8"
ddddocr = {version = "^1.5.5", python = "<3.13"}
fake-useragent = "^1.5.1"
filetype = "^1.2.0"
httpx = ">=0.20.0"
Jinja2 = "^3.0.0"
lxml = "^5.0.0"
mcstatus = "^11.0.0"
Pillow = "^10.0.0"
pyjwt = "^2.10.0"
pyncm = "^1.6.16"
selenium = "^4.23.1"
wolframalpha = "^5.0.0"
nonebot2 = "^2.2.0"
nb-cli = "^1.4.1"
nonebot-adapter-onebot = "^2.4.0"
nonebot-plugin-alias = "^0.4.0"
nonebot-plugin-apscheduler = "^0.4.0"
nonebot-plugin-callapi = "^0.2.1"
nonebot-plugin-capoo = "^0.1.5"
nonebot-plugin-code = "^0.0.8"
nonebot-plugin-datastore = "^1.3.0"
nonebot-plugin-emojimix = "^0.4.0"
nonebot-plugin-heweather = "^0.8.1"
nonebot-plugin-htmlrender = "^0.3.0"
nonebot-plugin-imagetools = "^0.4.0"
nonebot-plugin-memes = "^0.7.8"
nonebot-plugin-multincm = "^1.1.3"
nonebot-plugin-orm = {version = "^0.7.6", extras = ["default"]}
nonebot-plugin-picstatus = "^2.0.0"
nonebot-plugin-send-anything-anywhere = "^0.7.0"
nonebot-plugin-userinfo = "^0.2.0"
nonebot-plugin-fakepic = "^0.2.0"
nonebot-plugin-gscode = "^0.2.2"
nonebot-plugin-gspanel = "^0.2.25"
nonebot-plugin-setu4 = "^0.15.114514.2"
nonebot-plugin-miragetank = "^0.2.1"
nonebot-plugin-fakemsg = "^0.1.7"
nonebot-plugin-makemidi = "0.3.0"

[tool.poetry.group.dev.dependencies]

[tool.nonebot]
plugins = [
    "nonebot_plugin_alias",
    "nonebot_plugin_callapi",
    "nonebot_plugin_capoo",
    "nonebot_plugin_code",
    "nonebot_plugin_emojimix",
    "nonebot_plugin_heweather",
    "nonebot_plugin_imagetools",
    "nonebot_plugin_memes",
    "nonebot_plugin_multincm",
    "nonebot_plugin_picstatus",
    "nonebot_plugin_saa",
    "nonebot_plugin_fakepic",
    "nonebot_plugin_gscode",
    "nonebot_plugin_gspanel",
    "nonebot_plugin_setu4",
    "nonebot_plugin_miragetank",
    "nonebot_plugin_fakemsg",
    "nonebot_plugin_makemidi",
]
plugin_dirs = ["src/plugins"]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "Q"]
ignore = ["E402", "E501", "E711", "C901", "UP037"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = false }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
